# Rust-Hash-Cracker

./: Cargo.toml  README.md
src/: main.rs
