[package]
name = "rustcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

colored = "2.0"
indicatif = "0.16.2"
rand = "0.8.5"
sha3 = "0.10.8"
sha2 = "0.10.6"
sha1 = "0.10.5"
md5 = "0.7.0"
ntlm-hash = "0.1.0"
md4 = "0.10.2"